# figmaboy

./: .gitignore  LICENSE  README.md  package.json  playwright.config.ts  shell.nix  svelte.config.js  vitest.config.ts
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: canvas-interaction-audit.md  canvas-manual-qa.md
mcp/: types.ts
scripts/: check-version.mjs  prepare-sidecar.mjs  smoke-sidecar.mjs
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/mcp/: Cargo.toml
src-tauri/mcp/src/: main.rs  offline.rs
src-tauri/src/: editor_bridge.rs  lib.rs  main.rs  terminal.rs
src/lib/: document-validation.test.ts  document-validation.ts  domain.ts  geometry.test.ts  geometry.ts  icon-catalog.ts  repository.test.ts  repository.ts  text-layout.test.ts  text-layout.ts
src/lib/editor/: CanvasNode.svelte  EditorCanvas.svelte  Inspector.svelte  LayerRow.svelte  LeftPanel.svelte  PrototypePreview.svelte  TerminalPanel.svelte  Toolbar.svelte  canvas-selection.test.ts  canvas-selection.ts  editor-rpc.test.ts  editor-rpc.ts  editor.svelte.ts  editor.test.ts
src/routes/: +page.svelte
src/routes/editor/[id]/: +page.svelte
tests/: app.spec.ts
website/: astro.config.mjs  package.json
website/src/content/docs/docs/: index.mdx
website/src/content/docs/docs/core-concepts/: canvas-and-layers.md  codex-mcp.md  local-data.md
website/src/content/docs/docs/getting-started/: install.md  quickstart.md
website/src/content/docs/docs/reference/: files-and-paths.md  mcp-tools.md  shortcuts.md  troubleshooting.md
website/src/content/docs/docs/workflows/: build-with-codex.md  offline-context.md  review-and-refine.md
website/src/pages/: download.astro  index.astro
website/src/styles/: docs.css  download.css  fonts.css  landing.css
