[package]
name = "figmaboy-mcp"
version = "0.1.0"
description = "MCP server for the Figmaboy desktop application"
edition = "2021"
publish = false

[dependencies]
base64 = "0.22"
directories = "6"
rmcp = { version = "2.2", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
