[package]
name = "figmaboy-mcp"
version = "0.2.0"
description = "MCP server for the Figmaboy desktop application"
edition = "2021"
publish = false
license = "MIT"
repository = "https://github.com/0xmiki/figmaboy"

[dependencies]
base64 = "0.22"
directories = "6"
resvg = "0.47"
rmcp = { version = "2.2", features = ["server", "transport-io", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
